{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 48,
  "lineage": "92cb63e8-75d0-3a52-3d93-23e02a448da1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs_load_balancer",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607620271203:loadbalancer/app/ecsloadbalancer/d2f9f15d076b9414",
            "arn_suffix": "app/ecsloadbalancer/d2f9f15d076b9414",
            "dns_name": "ecsloadbalancer-787687826.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:607620271203:loadbalancer/app/ecsloadbalancer/d2f9f15d076b9414",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecsloadbalancer",
            "security_groups": [
              "sg-01592c82b84d18b39"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06215edd6821442bb"
              },
              {
                "subnet_id": "subnet-07ecc857970e94169"
              }
            ],
            "subnets": [
              "subnet-06215edd6821442bb",
              "subnet-07ecc857970e94169"
            ],
            "vpc_id": "vpc-01f03b06274c977c5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn1",
            "aws_subnet.test_public_sn2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607620271203:listener/app/ecsloadbalancer/d2f9f15d076b9414/89180557f5eb668b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:607620271203:targetgroup/ecstargetgroup/2c19d565301e3d57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:607620271203:listener/app/ecsloadbalancer/d2f9f15d076b9414/89180557f5eb668b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:607620271203:loadbalancer/app/ecsloadbalancer/d2f9f15d076b9414",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.ecs_load_balancer",
            "aws_alb_target_group.ecs_target_group",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn1",
            "aws_subnet.test_public_sn2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:607620271203:targetgroup/ecstargetgroup/2c19d565301e3d57",
            "arn_suffix": "targetgroup/ecstargetgroup/2c19d565301e3d57",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:607620271203:targetgroup/ecstargetgroup/2c19d565301e3d57",
            "lambda_multi_value_headers_enabled": false,
            "name": "ecstargetgroup",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_alb.ecs_load_balancer",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn1",
            "aws_subnet.test_public_sn2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-031cedfa2a85507c4",
            "public_dns": "ec2-52-70-235-35.compute-1.amazonaws.com",
            "public_ip": "52.70.235.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-048d6a847d9541388",
            "owner_id": "607620271203",
            "tags": {
              "Name": "fourthline igw"
            },
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-031cedfa2a85507c4",
            "id": "nat-0d69ee9647cc4b18b",
            "network_interface_id": "eni-053fddfcb84f63a20",
            "private_ip": "10.0.1.183",
            "public_ip": "52.70.235.35",
            "subnet_id": "subnet-06215edd6821442bb"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_subnet.test_public_sn1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-048d6a847d9541388",
            "id": "r-rtb-0115955d31f8a8f621080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0115955d31f8a8f62",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_test_public_sn",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-043e3bae5beb810a9",
            "owner_id": "607620271203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-048d6a847d9541388",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table"
            },
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_us_east_1a_nated",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0afb7bb5a10372533",
            "owner_id": "607620271203",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d69ee9647cc4b18b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Main Route Table for NAT-ed subnet"
            },
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.gw",
            "aws_subnet.test_public_sn1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_test_public_sn_01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b66aae45a9bc1487",
            "route_table_id": "rtb-043e3bae5beb810a9",
            "subnet_id": "subnet-06215edd6821442bb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.my_vpc_test_public_sn",
            "aws_subnet.test_public_sn1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_test_public_sn_02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e49b0d905c40b9ee",
            "route_table_id": "rtb-043e3bae5beb810a9",
            "subnet_id": "subnet-07ecc857970e94169"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.my_vpc_test_public_sn",
            "aws_subnet.test_public_sn2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_1a_nated",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f503fb4720da3067",
            "route_table_id": "rtb-0afb7bb5a10372533",
            "subnet_id": "subnet-06a89a73f581403ad"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.gw",
            "aws_route_table.my_vpc_us_east_1a_nated",
            "aws_subnet.test_public_sn1",
            "aws_subnet.test_public_sn3",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_vpc_us_east_2a_nated",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c4f58f34d541861",
            "route_table_id": "rtb-0afb7bb5a10372533",
            "subnet_id": "subnet-087e6e52d8dd2320c"
          },
          "dependencies": [
            "aws_eip.nat_gw_eip",
            "aws_nat_gateway.gw",
            "aws_route_table.my_vpc_us_east_1a_nated",
            "aws_subnet.test_public_sn1",
            "aws_subnet.test_public_sn4",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:security-group/sg-01592c82b84d18b39",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01592c82b84d18b39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20200210185213784600000006",
            "name_prefix": null,
            "owner_id": "607620271203",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:subnet/subnet-06215edd6821442bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-06215edd6821442bb",
            "map_public_ip_on_launch": false,
            "owner_id": "607620271203",
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:subnet/subnet-07ecc857970e94169",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07ecc857970e94169",
            "map_public_ip_on_launch": false,
            "owner_id": "607620271203",
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:subnet/subnet-06a89a73f581403ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06a89a73f581403ad",
            "map_public_ip_on_launch": false,
            "owner_id": "607620271203",
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn4",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:subnet/subnet-087e6e52d8dd2320c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-087e6e52d8dd2320c",
            "map_public_ip_on_launch": false,
            "owner_id": "607620271203",
            "vpc_id": "vpc-01f03b06274c977c5"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607620271203:vpc/vpc-01f03b06274c977c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-096b01815672e1861",
            "default_route_table_id": "rtb-0115955d31f8a8f62",
            "default_security_group_id": "sg-0734af81a93a39221",
            "dhcp_options_id": "dopt-000d3d7b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01f03b06274c977c5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0115955d31f8a8f62",
            "owner_id": "607620271203"
          }
        }
      ]
    }
  ]
}